--- a/stubby.orig.yml
+++ b/stubby.orig.yml
@@ -7,9 +7,6 @@
 # For more information see
 # https://dnsprivacy.org/wiki/display/DP/Configuring+Stubby
 #
-# Original version of this file can be found at https://github.com/getdnsapi/stubby/blob/develop/stubby.yml.example or as stubby.orig.yml in this repo
-# The stubby.yml file you are viewing has modifications from the default
-#
 # This format does not fully support all yaml features - the restrictions are:
 #   - the outer-most data structure must be a yaml mapping
 #   - mapping keys must be yaml scalars
@@ -71,8 +68,7 @@ edns_client_subnet_private : 1
 # better performance in most (but not all) cases.
 # Set to 0 to treat the upstreams below as an ordered list and use a single
 # upstream until it becomes unavailable, then use the next one.
-# NextDNS recommends setting this to 0 for its servers.
-round_robin_upstreams: 0
+round_robin_upstreams: 1
 
 # EDNS0 option for keepalive idle timeout in milliseconds as specified in
 # https://tools.ietf.org/html/rfc7828
@@ -124,10 +120,9 @@ idle_timeout: 10000
 # Set the listen addresses for the stubby DAEMON. This specifies localhost IPv4
 # and IPv6. It will listen on port 53 by default. Use <IP_address>@<port> to
 # specify a different port
-# We want stubby to listen to a different port than 53, so I specify 8053 below
 listen_addresses:
-  - 0.0.0.0@8053
-  - 0:0:0:0:0:0:0:0@8053
+  - 127.0.0.1
+  - 0::1
 
 ############################### DNSSEC SETTINGS ################################
 # Require DNSSEC validation. This will withhold answers with BOGUS DNSSEC
@@ -136,7 +131,7 @@ listen_addresses:
 # stubby is not able to fetch and validate the DNSSEC trust-anchor itself,
 # (using Zero configuration DNSSEC) stubby will not return answers at all.
 # If DNSSEC validation is required, a trust-anchor is also required.
-dnssec: GETDNS_EXTENSION_TRUE
+# dnssec: GETDNS_EXTENSION_TRUE
 
 # Stubby tries to fetch and validate the DNSSEC root trust anchor on the fly
 # when needed (Zero configuration DNSSEC), but only if it can store then
@@ -151,7 +146,7 @@ dnssec: GETDNS_EXTENSION_TRUE
 # however (such as in setups using systemd), it is recommended that an explicit
 # location for storing the trust-anchor files is provided that is writable (and
 # readable) by that special system user.
-appdata_dir: "/var/cache/stubby"
+# appdata_dir: "/var/cache/stubby"
 
 # When Zero configuration DNSSEC failed, because of network unavailability or
 # failure to write to the appdata directory, stubby will backoff trying to
@@ -193,59 +188,46 @@ appdata_dir: "/var/cache/stubby"
 # 2) Change to tls_authentication: GETDNS_AUTHENTICATION_NONE
 # 3) Remove all the upstream_recursive_servers listed below
 
-########################## [THIS NEEDS CHANGING]  ##############################
-# These are the NextDNS servers with my configuration. Please modify or use one of the commented upstreams below. 
 upstream_recursive_servers:
-  - address_data: 45.90.28.0
-    tls_auth_name: "acfd47.dns1.nextdns.io"
-  - address_data: 2a07:a8c0::0
-    tls_auth_name: "acfd47.dns1.nextdns.io"
-  - address_data: 45.90.30.0
-    tls_auth_name: "acfd47.dns2.nextdns.io"
-  - address_data: 2a07:a8c1::0
-    tls_auth_name: "acfd47.dns2.nextdns.io"
-########################## [THIS NEEDS CHANGING]  ##############################
-
-#    upstream_recursive_servers:
 ############################ DEFAULT UPSTREAMS  ################################
 ####### IPv4 addresses ######
 ### Test servers ###
 # The Surfnet/Sinodun servers
-#  - address_data: 145.100.185.15
-#    tls_auth_name: "dnsovertls.sinodun.com"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: 62lKu9HsDVbyiPenApnc4sfmSYTHOVfFgL3pyB+cBL4=
-#  - address_data: 145.100.185.16
-#    tls_auth_name: "dnsovertls1.sinodun.com"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: cE2ecALeE5B+urJhDrJlVFmf38cJLAvqekONvjvpqUA=
+  - address_data: 145.100.185.15
+    tls_auth_name: "dnsovertls.sinodun.com"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: 62lKu9HsDVbyiPenApnc4sfmSYTHOVfFgL3pyB+cBL4=
+  - address_data: 145.100.185.16
+    tls_auth_name: "dnsovertls1.sinodun.com"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: cE2ecALeE5B+urJhDrJlVFmf38cJLAvqekONvjvpqUA=
 # The getdnsapi.net server
-#  - address_data: 185.49.141.37
-#    tls_auth_name: "getdnsapi.net"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
+  - address_data: 185.49.141.37
+    tls_auth_name: "getdnsapi.net"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
 ####### IPv6 addresses ######
 ### Test servers ###
 # The Surfnet/Sinodun servers
-#  - address_data: 2001:610:1:40ba:145:100:185:15
-#    tls_auth_name: "dnsovertls.sinodun.com"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: 62lKu9HsDVbyiPenApnc4sfmSYTHOVfFgL3pyB+cBL4=
-#  - address_data: 2001:610:1:40ba:145:100:185:16
-#    tls_auth_name: "dnsovertls1.sinodun.com"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: cE2ecALeE5B+urJhDrJlVFmf38cJLAvqekONvjvpqUA=
+  - address_data: 2001:610:1:40ba:145:100:185:15
+    tls_auth_name: "dnsovertls.sinodun.com"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: 62lKu9HsDVbyiPenApnc4sfmSYTHOVfFgL3pyB+cBL4=
+  - address_data: 2001:610:1:40ba:145:100:185:16
+    tls_auth_name: "dnsovertls1.sinodun.com"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: cE2ecALeE5B+urJhDrJlVFmf38cJLAvqekONvjvpqUA=
 # The getdnsapi.net server
-#  - address_data: 2a04:b900:0:100::38
-#    tls_auth_name: "getdnsapi.net"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
+  - address_data: 2a04:b900:0:100::38
+    tls_auth_name: "getdnsapi.net"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
 
 
 ############################ OPTIONAL UPSTREAMS  ###############################
