--- a/etc/unbound/unbound.conf
+++ b/etc/unbound/unbound.conf
@@ -44,8 +44,8 @@ server:
 	# specify 0.0.0.0 and ::0 to bind to all available interfaces.
 	# specify every interface[@port] on a new 'interface:' labelled line.
 	# The listen interfaces are not changed on reload, only on restart.
-	interface 0.0.0.0@53
-	interface 0:0:0:0:0:0:0:0@53
+	interface: 0.0.0.0@53
+	interface: 0:0:0:0:0:0:0:0@53
 	# interface: 192.0.2.153
 	# interface: 192.0.2.154
 	# interface: 192.0.2.154@5003
