Finally fixed unbound!

--- a/etc/unbound/unbound.conf
+++ b/etc/unbound/unbound.conf
@@ -56,7 +56,7 @@ server:
 	# interface-automatic: no
 
 	# port to answer queries from
-	# port: 53
+	port: 53
 
 	# specify the interfaces to send outgoing queries to authoritative
 	# server from by ip-address. If none, the default (all) interface
@@ -298,7 +298,7 @@ server:
 	# How to do this is specific to your OS.
 	#
 	# If you give "" no chroot is performed. The path must not end in a /.
-	# chroot: ""
+	chroot: ""
 
 	# if given, user privileges are dropped (after binding port),
 	# and the given username is assumed. Default is user "unbound".
@@ -459,7 +459,8 @@ server:
 
 	# if yes, the above default do-not-query-address entries are present.
 	# if no, localhost can be queried (for testing and debugging).
-	# do-not-query-localhost: yes
+	do-not-query-localhost: no
+	# Got to mark this as no to make it work with Stubby
 
 	# if yes, perform prefetching of almost expired message cache entries.
 	# prefetch: no
@@ -515,7 +516,7 @@ server:
 	# Zone file format, with DS and DNSKEY entries.
 	# Note this gets out of date, use auto-trust-anchor-file please.
 	# trust-anchor-file: "/usr/share/dnssec-root/trusted-key.key"
-	trust-anchor-file: "/etc/unbound/root.key"
+	# I don't need this as we forward on to Stubby
 
 	# Trusted key for validation. DS or DNSKEY. specify the RR on a
 	# single line, surrounded by "". TTL is ignored. class is IN default.
