Shuffling around of some folders. Added a reload-unbound script

--- a/root/etc/unbound/unbound.conf
+++ b/root/etc/unbound/unbound.conf
@@ -5,11 +5,6 @@
 # Original version of this file can be found as unbound.orig.conf in this repo
 # The unbound.conf file you are viewing has modifications from the default
 
-#Use this to include other text into the file.
-#include: "otherfile.conf"
-# Add any local zones in these files
-include: "myzones/*.conf"
-
 # The server clause sets the main parameters.
 server:
 	# whitespace is not necessary, but looks cleaner.
@@ -1050,3 +1045,7 @@ forward-zone:
 #     rpz-log: yes
 #     rpz-log-name: "example policy"
 #     tags: "example"
+
+#Use this to include other text into the file.
+#include: "otherfile.conf"
+include: "/etc/unbound.d/*.conf"
