--- a/root/etc/stubby/stubby.yml
+++ b/root/etc/stubby/stubby.yml
@@ -8,7 +8,7 @@
 # https://dnsprivacy.org/wiki/display/DP/Configuring+Stubby
 #
 # Original version of this file can be found at https://github.com/getdnsapi/stubby/blob/develop/stubby.yml.example or as stubby.orig.yml in this repo
-# The stubby.yml file you are viewing has modifications from the default
+# The stubby.yml file you are viewing has modifications from the default to change the listening port
 #
 # This format does not fully support all yaml features - the restrictions are:
 #   - the outer-most data structure must be a yaml mapping
@@ -71,8 +71,7 @@ edns_client_subnet_private : 1
 # better performance in most (but not all) cases.
 # Set to 0 to treat the upstreams below as an ordered list and use a single
 # upstream until it becomes unavailable, then use the next one.
-# NextDNS recommends setting this to 0 for its servers.
-round_robin_upstreams: 0
+round_robin_upstreams: 1
 
 # EDNS0 option for keepalive idle timeout in milliseconds as specified in
 # https://tools.ietf.org/html/rfc7828
@@ -193,59 +192,46 @@ appdata_dir: "/var/cache/stubby"
 # 2) Change to tls_authentication: GETDNS_AUTHENTICATION_NONE
 # 3) Remove all the upstream_recursive_servers listed below
 
-########################## [THIS NEEDS CHANGING]  ##############################
-# These are the NextDNS servers with my configuration. Please modify or use one of the commented upstreams below. 
 upstream_recursive_servers:
-  - address_data: 45.90.28.0
-    tls_auth_name: "acfd47.dns1.nextdns.io"
-  - address_data: 2a07:a8c0::0
-    tls_auth_name: "acfd47.dns1.nextdns.io"
-  - address_data: 45.90.30.0
-    tls_auth_name: "acfd47.dns2.nextdns.io"
-  - address_data: 2a07:a8c1::0
-    tls_auth_name: "acfd47.dns2.nextdns.io"
-########################## [THIS NEEDS CHANGING]  ##############################
-
-#    upstream_recursive_servers:
 ############################ DEFAULT UPSTREAMS  ################################
 ####### IPv4 addresses ######
 ### Test servers ###
 # The Surfnet/Sinodun servers
-#  - address_data: 145.100.185.15
-#    tls_auth_name: "dnsovertls.sinodun.com"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: 62lKu9HsDVbyiPenApnc4sfmSYTHOVfFgL3pyB+cBL4=
-#  - address_data: 145.100.185.16
-#    tls_auth_name: "dnsovertls1.sinodun.com"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: cE2ecALeE5B+urJhDrJlVFmf38cJLAvqekONvjvpqUA=
+  - address_data: 145.100.185.15
+    tls_auth_name: "dnsovertls.sinodun.com"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: 62lKu9HsDVbyiPenApnc4sfmSYTHOVfFgL3pyB+cBL4=
+  - address_data: 145.100.185.16
+    tls_auth_name: "dnsovertls1.sinodun.com"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: cE2ecALeE5B+urJhDrJlVFmf38cJLAvqekONvjvpqUA=
 # The getdnsapi.net server
-#  - address_data: 185.49.141.37
-#    tls_auth_name: "getdnsapi.net"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
+  - address_data: 185.49.141.37
+    tls_auth_name: "getdnsapi.net"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
 ####### IPv6 addresses ######
 ### Test servers ###
 # The Surfnet/Sinodun servers
-#  - address_data: 2001:610:1:40ba:145:100:185:15
-#    tls_auth_name: "dnsovertls.sinodun.com"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: 62lKu9HsDVbyiPenApnc4sfmSYTHOVfFgL3pyB+cBL4=
-#  - address_data: 2001:610:1:40ba:145:100:185:16
-#    tls_auth_name: "dnsovertls1.sinodun.com"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: cE2ecALeE5B+urJhDrJlVFmf38cJLAvqekONvjvpqUA=
+  - address_data: 2001:610:1:40ba:145:100:185:15
+    tls_auth_name: "dnsovertls.sinodun.com"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: 62lKu9HsDVbyiPenApnc4sfmSYTHOVfFgL3pyB+cBL4=
+  - address_data: 2001:610:1:40ba:145:100:185:16
+    tls_auth_name: "dnsovertls1.sinodun.com"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: cE2ecALeE5B+urJhDrJlVFmf38cJLAvqekONvjvpqUA=
 # The getdnsapi.net server
-#  - address_data: 2a04:b900:0:100::38
-#    tls_auth_name: "getdnsapi.net"
-#    tls_pubkey_pinset:
-#      - digest: "sha256"
-#        value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
+  - address_data: 2a04:b900:0:100::38
+    tls_auth_name: "getdnsapi.net"
+    tls_pubkey_pinset:
+      - digest: "sha256"
+        value: foxZRnIh9gZpWnl+zEiKa0EJ2rdCGroMWm02gaxSc9Q=
 
 
 ############################ OPTIONAL UPSTREAMS  ###############################
