--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -15,9 +15,10 @@ jobs:
   buildx:
     runs-on: ubuntu-latest
     env: 
-      IMAGENAME=${{ inputs.imagename }}
+      # These variables are automatically created by GitHub actions (INPUT_xxx)
+      IMAGENAME=$INPUT_IMAGENAME
+      VERSION=$INPUT_VERSION
       PLATFORMS="linux/amd64,linux/386,linux/arm/v7,linux/arm/v6"
-      VERSION=${{ inputs.version }}
       DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}  
 
