--- a/.github/workflows/buildx.yaml
+++ b/.github/workflows/buildx.yaml
@@ -16,11 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       # These variables are automatically created by GitHub actions (INPUT_xxx)
-      IMAGENAME=$INPUT_IMAGENAME
-      VERSION=$INPUT_VERSION
-      PLATFORMS="linux/amd64,linux/386,linux/arm/v7,linux/arm/v6"
-      DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
-      DOCKER_PASSWORD=${{ secrets.DOCKER_PASSWORD }}  
+      IMAGENAME: $INPUT_IMAGENAME
+      VERSION: $INPUT_VERSION
+      PLATFORMS: "linux/amd64,linux/386,linux/arm/v7,linux/arm/v6"
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
 
     steps:
       - name: Checkout the code
